--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Naveen Ravichandrasekaran
 description: My profile
+logo: /image/profile.jpg
 show_downloads: false
 theme: jekyll-theme-minimal
 
